src/test/deca/context/invalid/resultats/test_field_initialization-cont.res
./src/test/deca/context/invalid/test_field_initialization.deca:15:9: Expression identifier a is not declared in this scop 
